@@ -12,6 +12,7 @@ WriteMakefile(
     PREREQ_PM => {
         'Test::More'            => 0,
         'version'               => 0,
+        'File::Basename'        => 0,
         'File::Spec::Functions' => 0,
         'List::Util'            => 0,
         'Text::Balanced'        => 0,
