@@ -43,6 +43,7 @@ Alternatively, to install with Module::Build, you can use the following commands
 
 DEPENDENCIES
 
+File::Basename
 File::Spec::Functions
 List::Util
 Text::Balanced
